--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
     "plugin:react/recommended",
     "plugin:jsx-a11y/recommended",
     "plugin:react-hooks/recommended",
+
     "plugin:prettier/recommended"
   ],
   "overrides": [],
@@ -23,5 +24,9 @@
     }
   },
   "plugins": ["react", "jsx-a11y"],
-  "rules": {}
+  "rules": {
+    "react/react-in-jsx-scope": "off",
+    "@typescript-eslint/no-unused-vars": ["error", { "args": "all" }],
+    "react/no-unknown-property": "off"
+  }
 }
