--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,8 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "@typescript-eslint/no-unused-vars": ["error", { "args": "all" }],
-    "react/no-unknown-property": "off"
+    "react/no-unknown-property": "off",
+    "@typescript-eslint/no-misused-promises": "off",
+    "@typescript-eslint/consistent-type-assertions": "off"
   }
 }
