--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.9.9",
     "@radix-ui/react-toggle-group": "^1.0.0",
     "immer": "^9.0.15",
